<resources>
    <string name="app_name">solarsearch-project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_search_planets">Planets</string>
    <string name="menu_search_dwarfs">Dwarf Planets</string>
    <string name="menu_search_moons">Moons</string>
    <string name="menu_search_comets">Comets</string>
    <string name="menu_search_stars">Stars</string>
    <string name="menu_search_asteroids">Asteroids</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>