<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single" android:color="@color/white" android:id="@+id/menu_item">
        <item
            android:id="@+id/nav_home"
            android:color="@color/white"

            android:title="@string/menu_home"
            android:textAppearance="@style/MenuTextStyleKategory"
            />
        <item
            android:id="@+id/nav_search"
            android:color="@color/white"

            android:title="@string/menu_search"
            android:textAppearance="@style/MenuTextStyle"
            />

        <item
            android:id="@+id/nav_search_planets"
            android:color="@color/complementary"
            android:title="@string/menu_search_planets"
            android:textAppearance="@style/MenuTextStyleKategory"/>

        <item
            android:id="@+id/nav_search_dwarfs"
            android:color="@color/complementary"
            android:title="@string/menu_search_dwarfs"
            android:textAppearance="@style/MenuTextStyleKategory"/>

        <item
            android:id="@+id/nav_search_moons"
            android:color="@color/complementary"
            android:title="@string/menu_search_moons"
            android:textAppearance="@style/MenuTextStyleKategory"/>

        <item
            android:id="@+id/nav_search_comets"
            android:color="@color/complementary"
            android:title="@string/menu_search_comets"
            android:textAppearance="@style/MenuTextStyleKategory"/>

        <item
            android:id="@+id/nav_search_stars"
            android:color="@color/complementary"
            android:title="@string/menu_search_stars"
            android:textAppearance="@style/MenuTextStyleKategory"/>
        <item
            android:id="@+id/nav_detail"
            android:color="@color/white"
            

            android:title="@string/menu_detail"
            android:textAppearance="@style/MenuTextStyleKategory"/>
    </group>

</menu>