<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.solarsearch_project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/toGallerie"
            app:destination="@id/nav_search"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.solarsearch_project.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.example.solarsearch_project.ui.detail.DetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_detail" />
</navigation>